@@ -1,0 +1,22 @@
+/*
+ *
+ * 
+ * Copyright (C) 2009 Benjamin Scott   <benscott@nwlink.com>
+ *
+ * This file is part of the Kvpm project.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License,  version 3, as 
+ * published by the Free Software Foundation.
+ * 
+ * See the file "COPYING" for the exact licensing terms.
+ */
+
+
+#ifndef KVPMSETUP_H
+#define KVPMSETUP_H
+
+bool isconfigured_kvpm();
+bool setup_kvpm();
+
+#endif
